@@ -116,7 +116,10 @@ Description: Minimal subset of the Python language (version @VER@)
  This package contains some essential modules. It is normally not
  used on it's own, but as a dependency of @PVER@-minimal.
 
-Package: lib@PVER@
+Package: lib@PVER@t64
+Provides: ${t64:Provides}
+Replaces: lib@PVER@
+Breaks: lib@PVER@ (<< ${source:Version})
 Architecture: any
 Multi-Arch: same
 Section: libs
@@ -143,7 +146,7 @@ Architecture: any
 Multi-Arch: allowed
 Depends: @PVER@ (= ${binary:Version}),
   lib@PVER@-dev (= ${binary:Version}),
-  lib@PVER@ (= ${binary:Version}),
+  lib@PVER@t64 (= ${binary:Version}),
   ${shlibs:Depends}, ${misc:Depends}
 Recommends: libc6-dev | libc-dev
 Description: Header files and a static library for Python (v@VER@)
@@ -159,7 +162,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: lib@PVER@-stdlib (= ${binary:Version}),
-  lib@PVER@ (= ${binary:Version}),
+  lib@PVER@t64 (= ${binary:Version}),
   libexpat1-dev, zlib1g-dev,
   ${shlibs:Depends}, ${misc:Depends}
 Recommends: libc6-dev | libc-dev
@@ -221,7 +224,7 @@ Package: @PVER@-dbg
 Section: debug
 Architecture: any
 Multi-Arch: allowed
-Depends: @PVER@ (= ${binary:Version}), lib@PVER@-dbg (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: @PVER@ (= ${binary:Version}), lib@PVER@t64-dbg (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Recommends: gdb
 Suggests: python3-gdbm-dbg, python3-tk-dbg
 Description: Debug Build of the Python Interpreter (version @VER@)
@@ -234,14 +237,16 @@ Description: Debug Build of the Python Interpreter (version @VER@)
  .
  See the README.debug for more information.
 
-Package: lib@PVER@-dbg
+Package: lib@PVER@t64-dbg
+X-Time64-Compat: lib@PVER@-dbg
+Provides: ${t64:Provides}
 Section: debug
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: lib@PVER@-stdlib (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Breaks: python3-gdbm-dbg (<< 3.9.9-1~)
-Replaces: python3-gdbm-dbg (<< 3.9.9-1~)
+Breaks: lib@PVER@-dbg (<< ${source:Version}), python3-gdbm-dbg (<< 3.9.9-1~)
+Replaces: lib@PVER@-dbg, python3-gdbm-dbg (<< 3.9.9-1~)
 Description: Debug Build of the Python Interpreter (version @VER@)
  The package holds two things:
  .
