@@ -1,4 +1,4 @@
-libpython@VER@.so.1.0 libpython@VER@ #MINVER#
+libpython@VER@.so.1.0 libpython@VER@t64 #MINVER#
 #include "libpython.symbols"
  PyModule_Create2@Base @SVER@
  PyModule_FromDefAndSpec2@Base @SVER@
