@@ -1,0 +1,1 @@
+libpython3.12t64-dbg: package-name-doesnt-match-sonames libpython3.12-dbg
