@@ -2,8 +2,10 @@ python3.12 (3.12.2-2) UNRELEASED; urgency=medium
 
   * Don't rely on module state in teedataobject_clear (from Brandt Bucher in
     https://github.com/python/cpython/issues/115874; closes: #1063345).
+  * Rename libraries for 64-bit time_t transition, declare X-Time64-Compat
+    to get proper Provides (Steve Langasek). Closes: #1064336.
 
- -- Colin Watson <cjwatson@debian.org>  Tue, 27 Feb 2024 10:15:37 +0000
+ -- Matthias Klose <doko@debian.org>  Wed, 28 Feb 2024 06:51:00 +0100
 
 python3.12 (3.12.2-1) unstable; urgency=medium
 
